[workspace]
members = [
    "logger",
    "frozen-abi/macro",
]

[workspace.package]
version = "2.0.0"
authors = ["Solanal Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solanalabs.com/"
license = "Apache-2.0"
edition = "2021"


[workspace.dependencies]
env_logger = "0.9.3"
lazy_static = "1.4.0"
log = "0.4.21"
proc-macro2 = "1.0.79"
quote = "1.0"
syn = "2.0"
rustc_version = "0.4"